Clean up some spacing / tabs Remove holder.js as it's no longer used (was it ever?) Move prettyprint CSS over to the correct file

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -29,16 +29,6 @@ body {
 	padding: 2px 20px;
 }
 
-pre.prettyprint {
-	font-size: 0.9rem;
-}
-pre.prettyprint.wrap {
-    overflow: initial;
-    white-space: initial;
-    word-break: initial;
-    font-size: 0.9rem;
-}
-
 .navbar .nav-link {
 	padding: 1.25rem;
 }
@@ -51,47 +41,47 @@ pre.prettyprint.wrap {
 }
 
 @media (min-width: 991.99px) {
-    .navbar {
-        padding: 0;
-    }
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+	.navbar {
+		padding: 0;
+	}
+	.navbar-expand-lg .navbar-nav .nav-link {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 }
 @media (max-width: 991.98px) {
-    .navbar .container {
-        padding: 0;
-        margin: 0 auto;
-        max-width: 100%;
-    }
-    .navbar .collapse.show {
-        margin-top: 1rem;
-    }
-    .navbar .dropdown-menu.show {
-        border-radius: 0;
-        border: none;
-        background-color: #1593a7;
-    }
-    .navbar .dropdown-menu.show .dropdown-item {
-        color: #fff;
-        padding: 0.5rem 1.5rem;
-    }
-    .navbar-text, .nav-clear-session {
-        margin-left: 1rem;
-    }
+	.navbar .container {
+		padding: 0;
+		margin: 0 auto;
+		max-width: 100%;
+	}
+	.navbar .collapse.show {
+		margin-top: 1rem;
+	}
+	.navbar .dropdown-menu.show {
+		border-radius: 0;
+		border: none;
+		background-color: #1593a7;
+	}
+	.navbar .dropdown-menu.show .dropdown-item {
+		color: #fff;
+		padding: 0.5rem 1.5rem;
+	}
+	.navbar-text, .nav-clear-session {
+		margin-left: 1rem;
+	}
 }
 
 .page-link {
-    color: #17a2b8;
+	color: #17a2b8;
 }
 .page-link:hover {
-    color: #138395;
+	color: #138395;
 }
 .page-link:focus {
-    box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.25)
+	box-shadow: 0 0 0 0.2rem rgba(23, 162, 184, 0.25)
 }
 .page-item.active .page-link {
-    background-color: #17a2b8;
-    border-color: #17a2b8;
+	background-color: #17a2b8;
+	border-color: #17a2b8;
 }
